# Pagekeeper

./: .gitignore  README.md
clawsync-backend/: .env.example  pyproject.toml
clawsync-backend/app/: main.py
clawsync-cli/: README.md  pyproject.toml
clawsync-cli/clawsync/: __init__.py  cli.py  server.py
clawsync-desktop/: main.js  package.json
clawsync-desktop/server/: run.py  server_app.py
clawsync-frontend/: index.html  package.json
clawsync-frontend/src/: App.css  App.tsx
clawsync-frontend/src/lib/: api.ts
clawsync-frontend/src/pages/: AgentDetail.tsx  AuthCallback.tsx  Dashboard.tsx  Landing.tsx  Timeline.tsx
clawsync-local/: index.html
pagekeeper-backend/: README.md
pagekeeper-backend/app/: main.py
pagekeeper-backend/static/: index.html
pagekeeper-backend/static/assets/: index-ClP9XxXn.js  index-Dh3W5dva.css
pagekeeper-cli/: README.md  pyproject.toml
pagekeeper-cli/pagekeeper/: __init__.py  cli.py  server.py
pagekeeper-cli/pagekeeper/static/assets/: index-Yc0rf2_u.js
pagekeeper-desktop/: main.js  package-lock.json  package.json
pagekeeper-desktop/server/: run.py  server_app.py
pagekeeper-desktop/server/static/: index.html
pagekeeper-desktop/server/static/assets/: index-D7F4-rKZ.css
pagekeeper-frontend/src/pages/: AgentDetail.tsx
pagekeeper-local/: index.html
webapp/: README.md
webapp/frontend/: README.md  index.html  package-lock.json  package.json
webapp/frontend/src/: App.css
webapp/frontend/src/pages/: AgentDetail.tsx  AuthCallback.tsx  Landing.tsx  Timeline.tsx
